Eliminando caracteres especiales

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div id="cajaMensajes">
         <div class="muneco">
-            <img src="muñeco.png" alt="" srcset="">
+            <img src="muneco.png" alt="" srcset="">
         </div>
         <div class="msgNoEncontrado">
             <div class="textNoEncontrado">
